--- a/src/ctiColorPicker.css
+++ b/src/ctiColorPicker.css
@@ -6,35 +6,26 @@
 .cti-cp-circle,
 .cti-cp-bar {
   position: absolute;
+  background: #555;
   background: rgba(0,0,0,.5);
 }
 
 .cti-cp-circle {
   height: 32px;
   width: 32px;
-  border: 4px solid rgba(255,255,255,.9);
+  border: 4px solid #ececec;
   border-radius: 50%;
 }
 
 .cti-cp-bar {
   height: 54px;
   width: 10px;
-  border: 3px solid rgba(255,255,255,.9);
+  border: 3px solid #ececec;
   border-radius: 5px;
 }
 
 .cti-canvas-square,
 .cti-canvas-strip {
   margin-top: 20px;
-}
-
-.cp-color-display {
-  float: left;
-  margin-top: 10px;
-  margin-left: 10%;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.37);
 }
 
